<resources>
    <string name="app_name">RoomPersistenceLibraryDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="veiw_user">Veiw User</string>
    <string name="update_user">Update User</string>
    <string name="delete_user">Delete User</string>
    <string name="add_new_user">Add New User</string>
    <string name="update">Update</string>
    <string name="contact_id">Contact Id</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
</resources>
